// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAllTypeDefinitions should return all input type definitions 1`] = `
"input NewSchemaUserTable_ActionInputType {
  id : Int!
  name : String!
}
input Table_ActionInputType {
  id : Int!
  name : String!
}
"
`;

exports[`generateAllTypeDefinitions should return all type definitions 1`] = `
"type NewSchemaUserTable_ActionType {
  id : Int!
  name : String!
}
type Table_ActionType {
  id : Int!
  name : String!
}
"
`;

exports[`generateTypeDef should return input type definitions of a single typeName 1`] = `
"input Table_ActionInputType {
  id : Int!
  name : String!
}"
`;

exports[`getAllTypeNames should return all type names 1`] = `
[
  "NewSchemaUserTable",
  "Table",
]
`;

exports[`getInnerType should return type of a typeName 1`] = `"Int!"`;
